meja/tests/request.meja
request('a) Request(list('a));

request('a) Request2(list('a))
  with handler (l) => { Snarky__Request.Repond (List.hd(l)); };
